# async-audio-lookup

./: README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
project/: Dockerfile  main.py  requirements.txt  worker.py
project/static/: main.js
project/tests/: test_tasks.py
src/lookup/: pyproject.toml  requirements.txt
src/lookup/lookup/: dataset.py  doc_utils.py  wav2vec.py
src/lookup/tests/: conftest.py  test_dataset.py  test_embeddings.py  test_getsetdel.py  test_tensors.py  test_utils.py  test_utils.py.tmp  test_wav2vec.py
src/lookup/tests/assets/: docker-compose.yml
