[tool.poetry]
name = "lookup"
version = "0.1.0"
description = ""
authors = ["Fernando Gonzalez <fernandogonzalez512@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
docarray = {extras = ["redis"], version = "0.19.0"}
pytest = "6.2.4"
pydub = "^0.25.1"
datasets = {extras = ["audio"], version = "^2.5.2"}
torch = "1.12.1"
librosa = "0.9.2"
jiwer = "^2.5.1"
protobuf = "4.21.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
